# ps_back

./: .env  .gitignore  Cargo.toml  Rocket.toml
migrations/2018-08-25-111800_picard_raw_products/: down.sql  up.sql
migrations/2018-08-28-064046_create_find_product_rules/: down.sql  up.sql
migrations/2018-09-03-112144_create_ingr_table/: down.sql  up.sql
seed/: seed_rules.sh
src/: database.rs  main.rs  models.rs  picard.rs  schema.rs
