[package]
name = "ps_front"
version = "0.1.0"
authors = ["Damien Espitallier <damien.espitallier@gmail.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = "0.3.16"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
diesel = { version = "1.3.2", features = ["sqlite"] }
dotenv = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
