[package]
name = "ps_back"
version = "0.1.0"
authors = ["Damien Espitallier <damien.espitallier@gmail.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = "0.3.16"
diesel = { version = "1.3.2", features = ["sqlite", "r2d2"] }
dotenv = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
